--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>us.upvp</groupId>
-    <artifactId>uPvP-Core</artifactId>
+    <groupId>net.hcfpvp</groupId>
+    <artifactId>HCF-Core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <repositories>
         <repository>
-            <id>upvp-api</id>
-            <url>http://oss.upvp.us/repository/upvp-api/</url>
+            <id>hcfpvp-api</id>
+            <url>http://oss.sethy.xyz/repository/HCF-API/</url>
         </repository>
         <repository>
-            <id>upvp-spigot-api</id>
-            <url>http://oss.upvp.us/repository/spigot-api/</url>
+            <id>hcfpvp-spigot-api</id>
+            <url>http://oss.sethy.xyz/repository/spigot-api/</url>
         </repository>
         <repository>
             <id>bungeecord-repo</id>
@@ -32,8 +32,8 @@
 
     <distributionManagement>
         <snapshotRepository>
-            <id>upvp-core</id>
-            <url>http://oss.upvp.us/repository/uPvP-Core/</url>
+            <id>hcfpvp-core</id>
+            <url>http://oss.sethy.xyz/repository/HCF-Core/</url>
         </snapshotRepository>
     </distributionManagement>
 
@@ -91,15 +91,65 @@
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <id>copy-installed-proxy</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>${project.packaging}</type>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>C:\Users\Wout\Documents\MC Server Developemnt\Core Test\Proxy\plugins
+                            </outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-installed-server</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>${project.packaging}</type>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>C:\Users\Wout\Documents\MC Server Developemnt\Core Test\Server\plugins
+                            </outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
     <!-- Dependencies which are NOT both in our Bungeecord and Spigot server implementations should be added above in the maven-shade-plugin inclusions. -->
     <dependencies>
         <dependency>
-            <groupId>us.upvp</groupId>
-            <artifactId>uPvP-API</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
+            <groupId>net.hcfpvp</groupId>
+            <artifactId>HCF-API</artifactId>
+            <version>1.5.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.hcfpvp</groupId>
+            <artifactId>HCF-Profile-API</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -112,9 +162,9 @@
             <version>1.10-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>biz.paluch.redis</groupId>
-            <artifactId>lettuce</artifactId>
-            <version>4.2.2-SNAPSHOT</version>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
