--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,5 +1,5 @@
-name: uPvP-Core
+name: HCF-Core
 version: 1.0.0-SNAPSHOT
-main: us.upvp.core.natives.bungee.NativeBungeePlugin
+main: net.hcfpvp.core.natives.bungee.NativeBungeePlugin
 author: Wout Ceulemans
 website: www.woutdev.be
